[package]
name = "leaflet"
version = "0.4.1"
authors = ["slowtec GmbH <post@slowtec.de>", "Lewin Probst <info@emirror.de>", "Daniel Santana <danielgsantana@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A wasm-bindgen wrapper for Leaflet.js"
homepage = "https://github.com/slowtec/leaflet-rs"
repository = "https://github.com/slowtec/leaflet-rs"
edition = "2024"
readme = "README.md"
rust-version = "1.85"

[dependencies]
wasm-bindgen = "0.2.103"
js-sys = "0.3.80"
paste = "1.0.15"
url = "2.5.7"

[dependencies.web-sys]
version = "0.3.80"
features = ["Event", "HtmlElement", "MouseEvent"]

[dev-dependencies]
wasm-bindgen-test = "0.3.53"

[badges]
maintenance = { status = "actively-developed" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"

# The error types returned should be self-explanatory.
missing_errors_doc = "allow"

# Repetitions of module/type names occur frequently when using many
# modules for keeping the size of the source files handy.
# Often types have the same name as their parent module.
module_name_repetitions = "allow"

# Allow #[wasm_bindgen] to create empty docs
empty_docs = "allow"
