[package]
name = "leaflet-rs-example"
version = "0.1.0"
authors = ["The leaflet-rs Developers"]
license = "MIT/Apache-2.0"
description = "An example using leaflet-rs"
homepage = "https://github.com/slowtec/leaflet-rs"
repository = "https://github.com/slowtec/leaflet-rs"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
leaflet = { path = "../.." }
# Your project would instead do:
# leaflet = "0.1.2"

gloo-events = "0.1"
gloo-utils = "0.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlAnchorElement", "Window"] }
