[package]
name = "leaflet-rs-example"
version = "0.1.0"
authors = ["The leaflet-rs Developers"]
license = "MIT/Apache-2.0"
description = "An example using leaflet-rs"
homepage = "https://github.com/slowtec/leaflet-rs"
repository = "https://github.com/slowtec/leaflet-rs"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
leaflet = { path = "../.." }
# Your project would instead do:
# leaflet = "0.4.0"

gloo-events = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "HtmlAnchorElement",
  "Window"
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
