[package]
name = "leaflet-rs-example-yew-component"
version = "0.1.0"
authors = ["The leaflet-rs Developers"]
license = "MIT/Apache-2.0"
description = "An example using leaflet-rs in yew.rs component"
homepage = "https://github.com/slowtec/leaflet-rs"
repository = "https://github.com/slowtec/leaflet-rs"
edition = "2021"
publish = false

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
implicit-clone = "0.3.6"
leaflet = "0.2"
wasm-bindgen = "0.2"
gloo-console = "0.2"
gloo-utils = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlAnchorElement", "console", "Window", "Document"]
